--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,15 +8,9 @@ jobs:
       # - restore_cache:
           # key: dependency-cache-{{ checksum "ember-quickstart/yarn.lock" }}
 
-      # - add_ssh_keys:
-          # fingerprints:
-            # - "69:7b:0a:b4:65:9b:22:86:ec:49:69:70:fe:6a:35:08"
-            # - "c3:7e:20:e3:60:2e:09:76:c4:28:c1:6b:49:b2:09:7f"
-            # - "70:d6:0b:32:d9:f1:df:a6:9f:63:52:de:bf:f5:0d:e0"
-
 
       # install nginx with the relevant stuu and start it
-      # configure for example.com
+      # configure for testci1111111.com
 
       - run:
           name: install nginx
@@ -31,40 +25,40 @@ jobs:
           command: service nginx status
           when: always
       - run:
-          name: sudo mkdir -p /var/www/example.com/html
-          command: sudo mkdir -p /var/www/example.com/html
+          name: sudo mkdir -p /var/www/testci1111111.com/html
+          command: sudo mkdir -p /var/www/testci1111111.com/html
           when: always
       - run:
-          name: sudo chown -R `whoami`:`whoami` /var/www/example.com/html
-          command: sudo chown -R `whoami`:`whoami` /var/www/example.com/html
+          name: sudo chown -R `whoami`:`whoami` /var/www/testci1111111.com/html
+          command: sudo chown -R `whoami`:`whoami` /var/www/testci1111111.com/html
           when: always
       - run:
-          name: sudo chmod -R 755 /var/www/example.com
-          command: sudo chmod -R 755 /var/www/example.com
+          name: sudo chmod -R 755 /var/www/testci1111111.com
+          command: sudo chmod -R 755 /var/www/testci1111111.com
           when: always
       - run:
-          name: sudo touch /var/www/example.com/html/index.html
-          command: sudo touch /var/www/example.com/html/index.html
+          name: sudo touch /var/www/testci1111111.com/html/index.html
+          command: sudo touch /var/www/testci1111111.com/html/index.html
           when: always
       - run:
-          name: sudo chmod -R 777 /var/www/example.com/html/
-          command: sudo chmod -R 777 /var/www/example.com/html/
+          name: sudo chmod -R 777 /var/www/testci1111111.com/html/
+          command: sudo chmod -R 777 /var/www/testci1111111.com/html/
           when: always
       - run:
-          name: /var/www/example.com/html/index.html
-          command: sudo echo '<html><head><title>Welcome to example.com!</title></head><body><h1>Success!  The example.com server block is working!</h1></body></html>' >> /var/www/example.com/html/index.html
+          name: /var/www/testci1111111.com/html/index.html
+          command: sudo echo '<html><head><title>Welcome to testci1111111.com!</title></head><body><h1>Success!  The testci1111111.com server block is working!</h1></body></html>' >> /var/www/testci1111111.com/html/index.html
           when: always
       - run:
-          name: /etc/nginx/sites-available/example.com
-          command: sudo cp server_conf /etc/nginx/sites-available/example.com
+          name: /etc/nginx/sites-available/testci1111111.com
+          command: sudo cp server_conf /etc/nginx/sites-available/testci1111111.com
           when: always
       - run:
-          name: cat /etc/nginx/sites-available/example.com
-          command: cat /etc/nginx/sites-available/example.com
+          name: cat /etc/nginx/sites-available/testci1111111.com
+          command: cat /etc/nginx/sites-available/testci1111111.com
           when: always
       - run:
-          name: sudo ln -s /etc/nginx/sites-available/example.com /etc/nginx/sites-enabled/
-          command: sudo ln -s /etc/nginx/sites-available/example.com /etc/nginx/sites-enabled/
+          name: sudo ln -s /etc/nginx/sites-available/testci1111111.com /etc/nginx/sites-enabled/
+          command: sudo ln -s /etc/nginx/sites-available/testci1111111.com /etc/nginx/sites-enabled/
           when: always
       - run:
           name: sudo sed -i 's/# server_names_hash_bucket_size/server_names_hash_bucket_size/g' /etc/nginx/nginx.conf
@@ -79,8 +73,8 @@ jobs:
           command: sudo service nginx restart
           when: always
       - run:
-          name: curl -X GET 'http://example.com'
-          command: sudo curl -X GET 'http://example.com'
+          name: curl -X GET 'http://testci1111111.com'
+          command: sudo curl -X GET 'http://testci1111111.com'
           when: always
 
 
@@ -186,22 +180,6 @@ jobs:
           when: always
 
 
-      - run:
-          name: cd /var/www/html/accounts
-          command: cd /var/www/html/accounts
-          when: always
-      - run:
-          name: git clone git@bitbucket.org:ucraftme/accounts.git
-          command: git clone git@bitbucket.org:ucraftme/accounts.git
-          when: always
-      - run:
-          name: composer install
-          command: composer install
-          when: always
-      - run:
-          name: sudo php artisan migrate --seed
-          command: sudo php artisan migrate --seed
-          when: always
 
 workflows:
   version: 2
